--- a/docs/_sass/variables.scss
+++ b/docs/_sass/variables.scss
@@ -5,7 +5,7 @@ $medium-breakpoint: 42em !default;
 // Headers
 $header-heading-color: #fff !default;
 $header-bg-color: #991592 !default;
-$header-bg-color-secondary: #5e1599 !default;
+$header-bg-color-secondary: #a65eb4 !default;
 
 // Text
 $section-headings-color: #831599 !default;
