--- a/docs/_sass/variables.scss
+++ b/docs/_sass/variables.scss
@@ -4,7 +4,7 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #991592 !default;
+$header-bg-color: #af31a9 !default;
 $header-bg-color-secondary: #a65eb4 !default;
 
 // Text
