--- a/docs/_sass/variables.scss
+++ b/docs/_sass/variables.scss
@@ -4,13 +4,13 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #af31a9 !default;
-$header-bg-color-secondary: #a65eb4 !default;
+$header-bg-color: #6200ea !default;
+$header-bg-color-secondary: #9d46ff !default;
 
 // Text
-$section-headings-color: #831599 !default;
+$section-headings-color: #6200ea !default;
 $body-text-color: #606c71 !default;
-$body-link-color: #871eb8 !default;
+$body-link-color: #0039cb !default;
 $blockquote-text-color: #819198 !default;
 
 // Code
