--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     url
-    <link rel="icon" type="image/x-icon" href="{{site.github.url}}/favicon.png">
+    <link rel="icon" type="image/x-icon" href="https://textmaster.ephrine.in/favicon.png">
 
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
