--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -2,8 +2,8 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
-    url
-    <link rel="icon" type="image/x-icon" href="https://textmaster.ephrine.in/favicon.png">
+    
+    <link rel="icon" type="image/x-icon" href="/favicon.png">
 
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
